--- a/src/trabalho3bd/JanelaPrincipal.form
+++ b/src/trabalho3bd/JanelaPrincipal.form
@@ -186,6 +186,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Pessoas Associadas"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPAssociadasActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLstTodas">
       <Properties>
