--- a/src/trabalho3bd/JanelaPrincipal.form
+++ b/src/trabalho3bd/JanelaPrincipal.form
@@ -189,6 +189,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Listar Correntes"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLstCorrentesActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLstConcluidas">
       <Properties>
